Display raw signal plots one after each other (signal trace from DFD and manual plotting). Not sure why they look different. DFD seems to be missing some of the pulses?

--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -349,11 +349,11 @@ Figure \ref{fig:IdentifiedPulses} shows pulses or windows for the signal 21:20 i
 \end{figure}
 
 \subsection{Visual Observations}
-Figure \ref{fig:SignalPulses} shows the signals for 225 pulses. Each sensor channel is plotted a different tile. 
+Figure \ref{fig:SignalPulses} shows the signals for 224 pulses. Each sensor channel is plotted a different tile. 
 \begin{figure}[H]
     \centering
     \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulses.eps}
-    \caption{Signal pulses for 225 pulses on each of the 12 signal channels}
+    \caption{Signal pulses for 224 pulses on each of the 12 signal channels}
     \label{fig:SignalPulses}
 \end{figure}
 
@@ -361,46 +361,13 @@ Signal 21.07 Angle over Rolls and 21.10 Position over Rolls are fairly constant.
 Signal 21:31 and 21:32 are also fairly constant but contain some information when zoomed in.
 Signal 21.35 is a perfect constant signal. The label is set point so it can be assumed that this is a set point that is controlled by the operator and not as sensor on the machine providing feedback.
 
-Figure \ref{fig:SignalPulse5} shows 
+Figure \ref{fig:SignalPulse1} shows 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse5.eps}
-    \caption{Signale 5 Pulses}
-    \label{fig:SignalPulse5}
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse1.eps}
+    \caption{Signal 1 Pulses}
+    \label{fig:SignalPulse1}
 \end{figure}
-
-Figure \ref{fig:SignalPulse5} shows 
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse5.eps}
-    \caption{Signale 5 Pulses}
-    \label{fig:SignalPulse5}
-\end{figure}
-
-Figure \ref{fig:SignalTrace21.20} shows 21:20 Actual moment under Rolls (Nm)
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.20.png}
-    \caption{Signal Trace 21.20}
-    \label{fig:SignalTrace21.20}
-\end{figure}
-
-%Figure \ref{fig:SignalTrace21.12} shows ...
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.12.png}
-    \caption{Signal Trace 21.12}
-    \label{fig:SignalTrace21.12}
-\end{figure}
-
-%Figure \ref{fig:SignalTrace21.28} shows ...
-\begin{figure}[H]
-    \centering
-    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.28.png}
-    \caption{Signal Trace 21.28}
-    \label{fig:SignalTrace21.28}
-\end{figure}
-
 %Figure \ref{fig:SignalTrace21.07} shows 
 \begin{figure}[H]
     \centering
@@ -409,6 +376,62 @@ Figure \ref{fig:SignalTrace21.20} shows 21:20 Actual moment under Rolls (Nm)
     \label{fig:SignalTrace21.07}
 \end{figure}
 
+
+Figure \ref{fig:SignalPulse3} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse3.eps}
+    \caption{Signal 3 Pulses}
+    \label{fig:SignalPulse3}
+\end{figure}
+%Figure \ref{fig:SignalTrace21.12} shows ...
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.12.png}
+    \caption{Signal Trace 21.12}
+    \label{fig:SignalTrace21.12}
+\end{figure}
+
+
+Figure \ref{fig:SignalPulse5} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse5.eps}
+    \caption{Signal 5 Pulses}
+    \label{fig:SignalPulse5}
+\end{figure}
+Figure \ref{fig:SignalTrace21.20} shows 21:20 Actual moment under Rolls (Nm)
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.20.png}
+    \caption{Signal Trace 21.20}
+    \label{fig:SignalTrace21.20}
+\end{figure}
+
+
+Figure \ref{fig:SignalPulse6} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse6.eps}
+    \caption{Signal 6 Pulses}
+    \label{fig:SignalPulse6}
+\end{figure}
+%Figure \ref{fig:SignalTrace21.28} shows ...
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalTrace21.28.png}
+    \caption{Signal Trace 21.28}
+    \label{fig:SignalTrace21.28}
+\end{figure}
+
+
+Figure \ref{fig:SignalPulse11} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/SignalPulse11.eps}
+    \caption{Signal 11 Pulses}
+    \label{fig:SignalPulse11}
+\end{figure}
 %Figure \ref{fig:SignalTrace21.35} shows ...
 \begin{figure}[H]
     \centering
