Commit all work from the weekend.

--- a/Latex Document/Thesis.bib
+++ b/Latex Document/Thesis.bib
@@ -358,3 +358,10 @@
   year={2019},
   publisher={MDPI}
 }
+
+@book{ahmed2020condition,
+  title={Condition monitoring with vibration signals: Compressive sampling and learning algorithms for rotating machines},
+  author={Ahmed, Hosameldin and Nandi, Asoke K},
+  year={2020},
+  publisher={John Wiley \& Sons}
+}
