--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -436,6 +436,78 @@ Figure \ref{fig:FeatureVsFeatureSignal1} shows
     \label{fig:FeatureVsFeatureSignal1}
 \end{figure}
 
+
+Figure \ref{fig:Models_Signal3Feature1} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal3Feature1.eps}
+    \caption{Signal 3 Feature 1}
+    \label{fig:Models_Signal3Feature1}
+\end{figure}
+Figure \ref{fig:Models_Signal3Feature10} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal3Feature10.eps}
+    \caption{Signal 3 Feature 10}
+    \label{fig:Models_Signal3Feature10}
+\end{figure}
+Figure \ref{fig:Models_Signal3Feature11} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal3Feature11.eps}
+    \caption{Signal 3 Feature 11}
+    \label{fig:Models_Signal3Feature11}
+\end{figure}
+Figure \ref{fig:Models_Signal3Feature14} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal3Feature14.eps}
+    \caption{Signal 3 Feature 14}
+    \label{fig:Models_Signal3Feature14}
+\end{figure}
+
+
+Figure \ref{fig:Models_Signal5Feature1} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal5Feature1.eps}
+    \caption{Signal 5 Feature 1}
+    \label{fig:Models_Signal5Feature1}
+\end{figure}
+
+
+
+Figure \ref{fig:Models_Signal6Feature1} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal6Feature1.eps}
+    \caption{Signal 6 Feature 1}
+    \label{fig:Models_Signal6Feature1}
+\end{figure}
+
+
+Figure \ref{fig:Models_Signal9Feature3} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal9Feature3.eps}
+    \caption{Signal 9 Feature 3}
+    \label{fig:Models_Signal9Feature3}
+\end{figure}
+Figure \ref{fig:Models_Signal9Feature4} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal9Feature4.eps}
+    \caption{Signal 9 Feature 4}
+    \label{fig:Models_Signal9Feature4}
+\end{figure}
+Figure \ref{fig:Models_Signal9Feature11} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Signal9Feature11.eps}
+    \caption{Signal 9 Feature 11}
+    \label{fig:Models_Signal9Feature11}
+\end{figure}
+
 \subsubsection{Signal vs Signal}
 Figure \ref{fig:FeatureVsFeatureSignal1} shows 
 \begin{figure}[H]
