--- a/Latex Document/Thesis.tex
+++ b/Latex Document/Thesis.tex
@@ -516,6 +516,33 @@ Figure \ref{fig:FeatureVsFeatureSignal1} shows
     \caption{Signal Vs Signal for Feature 1}
     \label{fig:SignalVsSignalFeature1}
 \end{figure}
+
+
+Figure \ref{fig:Models_Feature5Signal1} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Feature5Signal1.eps}
+    \caption{Feature 5 Signal 1}
+    \label{fig:Models_Feature5Signal1}
+\end{figure}
+
+
+Figure \ref{fig:Models_Feature14Signal1} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Feature14Signal1.eps}
+    \caption{Feature 14 Signal 1}
+    \label{fig:Models_Feature14Signal1}
+\end{figure}
+
+Figure \ref{fig:Models_Feature16Signal3} shows 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=\textwidth, height=\textheight, keepaspectratio]{figures/Models_Feature16Signal3.eps}
+    \caption{Feature 16 Signal 3}
+    \label{fig:Models_Feature16Signal3}
+\end{figure}
+
 \subsection{Linear Models}
 
 \subsection{Multivariate models}
